7_Security_in_transit_TSL/peer_authentication_strict_mutual_tls_default_ns.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default
  namespace: default # namespace-wide policy
spec:
  mtls:
    mode: STRICT # configures all workloads in the mesh to only accept requests encrypted with TLS
