7_Security_in_transit_TSL/peer_authentication_strict_mutual_tls_httpbin.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default
  namespace: default # namespace-wide policy
spec:
  selector:
    matchLabels:
      run: httpbin # <---- config applied to incoming request to this pod label
  mtls:
    mode: STRICT # configures all workloads in the mesh to only accept requests encrypted with TLS
