7_Security_in_transit_TSL/pod_curl.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: curl
  name: curl
spec:
  containers:
  - args:
    - /bin/sh
    - -c
    - sleep infinity
    image: curlimages/curl
    name: curl
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Never
status: {}
