7_Security_in_transit_TSL/pod_curl_non_istio.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: curl
  name: curl
  namespace: non-istio
spec:
  containers:
  - args:
    - /bin/sh
    - -c
    - sleep infinity
    image: curlimages/curl
    name: curl
  dnsPolicy: ClusterFirst
  restartPolicy: Never
