7_Security_in_transit_TSL/pod_httpbin.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: httpbin
  name: httpbin
spec:
  containers:
  - image: docker.io/kennethreitz/httpbin
    name: httpbin
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Never
status: {}
