7_Security_in_transit_TSL/gateway_https_sni.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: bookinfo-gateway
spec:
  selector: 
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*.elb.amazonaws.com"
  - port: 
      number: 443
      name: https 
      protocol: HTTPS 
    hosts:
    - "*.elb.amazonaws.com" # <----- host this gateway will accept for HTTPS port 443
    tls:
      mode: SIMPLE
      credentialName: gateway-cert-aws-elb-dns # fetches certs from Kubernetes secret
  - port: # <------ new server config added for *.sni.com
      number: 443
      name: https-sni # <----- must be unique name among other port's name
      protocol: HTTPS # MUST BE one of HTTP|HTTPS|GRPC|HTTP2|MONGO|TCP|TLS. TLS implies the connection will be routed based on the SNI header to the destination without terminating the TLS connection. Ref: https://istio.io/latest/docs/reference/config/networking/gateway/#Port
    hosts:
    - "*.sni.com" # <----- add new host
    tls:
      mode: SIMPLE
      credentialName: gateway-cert-sni-dns # fetches certs from Kubernetes secret
