7_Security_in_transit_TSL/destinationrule_strict_mutual_tls_httpbin.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: httpbin
spec:
  host: httpbin.default # <--- specify outgoing request to which host (K8s service or external host registered by ServiceEntry) that config will be applied to
  trafficPolicy:
    tls: 
      mode: ISTIO_MUTUAL # <---- strict mutual TLS required to the specified destination host
