7_Security_in_transit_TSL/virtual_service_httpbin.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: httpbin
spec:
  hosts: # destinations that these routing rules apply to. VirtualService must be bound to the gateway and must have one or more hosts that match the hosts specified in a server
  # - "*"
  - "*.elb.amazonaws.com"
  - httpbin
  gateways: # names of gateways and sidecars that should apply these routes
  - bookinfo-gateway # Don't ONLY USE this gateway as "ratings" k8s service is used internally by productpage service, so this VS rule should be applied to Envoy sidecar proxy inside ratings pod, not edge proxy in gateway pod. 
  # - mesh # applies to all the sidecars in the mesh. The reserved word mesh is used to imply all the sidecars in the mesh. When gateway field is omitted, the default gateway (mesh) will be used, which would apply the rule to all sidecars in the mesh. If a list of gateway names is provided, the rules will apply only to the gateways. To apply the rules to both gateways and sidecars, specify mesh as one of the gateway names. Ref: https://istio.io/latest/docs/reference/config/networking/virtual-ser [...]
  http: # L7 load balancing by http path and host, just like K8s ingress resource
  - match:
    - uri:
        exact: /
      ignoreUriCase: true
    - uri:
        exact: /ip
      ignoreUriCase: true
    - uri:
        exact: /headers
      ignoreUriCase: true
    route:
    - destination:
        host: httpbin.default.svc.cluster.local  # service name should be either short one or FQDN, NOT partial one like "httpbin.default"
        port:
          number: 80
